refactor: update refresh route
